# play-prediction

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-image.yml
app/: app.py  model.py  utils.py
app/static/css/: main.css
app/static/js/: driveInput.js  scoreDifferentialInput.js  seasonInput.js  sliderInput.js  spreadInput.js
app/templates/: index.html  output.html
data/: encodings.json
models/: CHANGELOG.md  xgboost_v1.0.0-min_2024-06-05_23-25-07_0.6937.json  xgboost_v1.0.0_2024-05-16_05-35-56_0.7185.json  xgboost_v1.1.0_2024-06-06_17-32-26_0.7234.json  xgboost_v1.1.1_2024-06-07_13-19-17_0.7323.json  xgboost_v1.1.1_2024-06-11_21-42-49_0.7242.json  xgboost_v1.2.0_2024-06-14_12-54-05_0.7250.json  xgboost_v3_2024-06-06_12-16-09_0.7185.json
nflpp/: pyproject.toml
nflpp/nflpp/: __init__.py  dataprep.py  plot.py
notebooks/: xgb.ipynb
play-prediction/: app.py  xgb.ipynb
