[tool.poetry]
name = "play-prediction"
version = "0.1.0"
description = "AI-powered NFL play prediction & betting dashboard"
authors = ["Hans Missenheim <hansmissenheim@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
xgboost = "^2.0.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytailwindcss = "^0.2.0"
ruff = "^0.4.8"

[tool.poetry.group.training.dependencies]
bayesian-optimization = "^1.4.3"
catppuccin-matplotlib = "^0.4"
matplotlib = "^3.9.0"
nfl-data-py = "^0.3.1"
nflpp = { path = "nflpp", develop = true }

[tool.ruff]
target-version = "py310"

[tool.ruff.per-file-ignores]
"nflpp/nflpp/plot.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
